--- a/css/webcafe.css
+++ b/css/webcafe.css
@@ -9,6 +9,9 @@
 - 색상(전경, 배경) */
 
 /* 기본 스타일 */
+*, *::before, *::after{
+  box-sizing: border-box;
+}
 html{
   font-size: 10px;
 }
@@ -27,7 +30,57 @@ a{
 }
 
 /* 공통 스타일 */
+legend, .a11y-hidden{
+  position: absolute;
+  background: blue;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+}
 
+/* Small 디바이스 스타일 */
+@media screen and (max-width: 319px){
+  .header{
+    background:#38302E;
+    color:#fff;
+    padding: 1em 1em;
+  }
+
+  .member{
+    margin: 1em 0;
+  }
+
+  input[type="search"]{
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    height: 30px;
+    padding: 2px 2px 2px 5px;
+    width: calc(100% - 30px);
+    font-size: 1.4rem;
+  }
+
+  .btn-search{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    border: 0px solid #aaa;
+    padding: 0;
+    background: transparent;
+    font-size: 1.4rem;
+  }
+
+  .btn-search::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    background: url('./images/btn_search.png') no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
+  }
+}
 
 /* 모바일 스타일 */
 @media screen and (min-width: 320px) and (max-width: 999px){
@@ -56,10 +109,14 @@ a{
     justify-content: flex-end; /* 메인축 정렬 */
   }
 
+  .member .bar{
+    display: none;
+  }
+
   .member a{
     display: inline-block;
     /*background: blue;*/
-    width: 100px;
+    /*width: 100px;*/
     padding: 0.5em 1em;
     margin-right: -1em;
   }
@@ -70,17 +127,124 @@ a{
 
   /* 모바일 로고 */
   .logo{
-    background: orangered;
+    /*background: orangered;*/
+    margin-top: 1em;
+    margin-bottom: 1em;
   }
   .logo img{
-    background: blue;
+    /*background: blue;*/ /* To check region */
     vertical-align: top; /* vertical-align을 사용하면 block 속성으로 렌더링 */
+  }
+
+  /* 모바일 검색폼 */
+  .search-form{
+    /* background: yellow; */
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 0;
+  }
+
+  input[type="search"]{
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    height: 30px;
+    padding: 2px 2px 2px 10px;
+    width: calc(100% - 1em - 30px);
+    font-size: 1.4rem;
+  }
+
+  .btn-search{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    border: 0px solid #aaa;
+    padding: 0;
+    background: transparent;
+    font-size: 1.4rem;
+  }
+
+  .btn-search::after{
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    background: url('./images/btn_search.png') no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
   }
 }
 
 /* 데스크탑 스타일 */
 @media screen and (min-width: 1000px){
+  /* 데스크탑 헤더 */
+  .header{
+    width: 1000px;
+    background: yellow;
+    position: relative;
+    margin: 0 auto;
+  }
 
+  /* 데스크탑 로고 */
+  .logo{
+    /* background: blue; */
+    position: absolute;
+    top: 50%;
+    margin-top: -30px;
+    left: 10px;
+    /* display: none; */
+    /* transform: translateY(-50%); */
+  }
+  /* 데스크탑 멤버링크 */
+  .member{
+    /* background: pink; */
+    text-align: right;
+    padding: 2px 0; /* 포커스 되었을 때, 아웃라인이 잘리지 않도록 해줌 */
+    position: relative;
+    /*right: -10px;*/ /* 밑에 있는 검색창과 align을 맞추기 위해 */
+  }
+  .member a{
+    /* background: skyblue;   */
+    padding: 0.5em 0;
+    margin-left: 3px;
+  }
+  .member li, .member a{
+    /* background: orange; */
+    display: inline-block;
+  }
+  /* .member li:nth-child(n+2)::before{
+    content: '|';
+  } */
+  /* 데스크탑 검색 폼 */
+  .search-form{
+    /* background: lime; */
+    text-align: right;
+    margin: 1em 0;
+  }
+
+  .search-form input[type="search"]{
+    /* background: skyblue; */
+    width: 400px;
+    height: 35px;
+    border: 1px solid #999;
+    padding: 1px 1px 1px 5px;
+    border-radius: 5px;
+    margin-right: 2px;
+  }
+
+  .btn-search{
+    height: 35px;
+    border: 1px solid #999;
+    padding: 1px 1em;
+    background: #988574;
+    color: #fff;
+    border-radius: 15px 0 15px 0;
+    transition: border-radius 0.4s
+  }
+
+  .btn-search:hover, .btn-search:focus{
+    border-radius: 0 15px 0 15px;
+  }
 }
 
 /* a:link{
