--- a/css/webcafe.css
+++ b/css/webcafe.css
@@ -177,12 +177,17 @@ legend, .a11y-hidden{
 
 /* 데스크탑 스타일 */
 @media screen and (min-width: 1000px){
+  /* 데스크탑 레이아웃 */
+  .header, .menu{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   /* 데스크탑 헤더 */
   .header{
-    width: 1000px;
-    background: yellow;
+    /* background: yellow; */
     position: relative;
-    margin: 0 auto;
   }
 
   /* 데스크탑 로고 */
@@ -244,6 +249,60 @@ legend, .a11y-hidden{
 
   .btn-search:hover, .btn-search:focus{
     border-radius: 0 15px 0 15px;
+  }
+
+  /* 데스크탑 네비게이션 */
+  .navigation{
+    background: #988574;
+    /* box-shadow: 0 0 -2px 5px #000, 0 0 2px 5px #000; */ /*x-offset y-offset blur spread color */
+    /* box-shadow: 0 10px 0 0 #000; */
+    border-top: 2px solid #181818;
+    border-bottom: 2px solid #181818;
+  }
+
+  .menu{
+    /* background: yellow; */
+    margin-top: 20px;
+    color: white;
+    /* margin-bottom: 20px; */
+    /* overflow: auto; */ /* 자식을 기준으로 높이를 다시 계산함 */
+  }
+
+  .clearfix::after{
+    content: "";
+    background: orange;
+    display: block;
+    clear: both;
+  }
+
+  /* .menu > li:nth-child(1){
+    background: skyblue;
+    float: left;
+  }
+
+  .menu > li:nth-child(2){
+    background: pink;
+  } */
+
+  .menu-list{
+    float: left;
+  }
+
+  .menu-item{
+    font-size: 1.8em;
+    text-shadow: 0 1px 0 #000, 1px 0 0 #000, 0 -1px 0 #000, -1px 0 0 #000;
+  }
+
+  .menu-list:nth-child(n+2){
+    margin-left: 83px;
+  }
+
+  .sub-menu{
+    margin: 1em;
+  }
+
+  .sub-menu li{
+    margin-bottom: 1em;
   }
 }
 
